--- a/jet-audio-monitor/Dockerfile
+++ b/jet-audio-monitor/Dockerfile
@@ -1,5 +1,6 @@
 FROM maven:3-openjdk-11
 WORKDIR /jet-audio-monitor
+RUN apt-get update && apt-get install -y python3
 COPY src ./src/
 COPY pom.xml ./
 RUN mvn package
