--- a/jet-audio-monitor/pom.xml
+++ b/jet-audio-monitor/pom.xml
@@ -31,6 +31,11 @@
             <version>2.8.6</version>
         </dependency>
         <dependency>
+            <groupId>net.sourceforge.argparse4j</groupId>
+            <artifactId>argparse4j</artifactId>
+            <version>0.8.1</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
