--- a/jet-audio-monitor/pom.xml
+++ b/jet-audio-monitor/pom.xml
@@ -67,6 +67,7 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
                 <configuration>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
                     <transformers>
                     <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                         <mainClass>com.sorintlab.jet.data.acquisition.audio.MonitoringJob</mainClass>
