--- a/jet-audio-monitor/build.gradle
+++ b/jet-audio-monitor/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'application'
     id 'com.google.protobuf' version '0.8.14'
     id 'idea'
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
 
 repositories {
