--- a/compose.yaml
+++ b/compose.yaml
@@ -17,6 +17,12 @@ services:
       ports:
         - "8081:8081"
 
+    mc:
+      image: hazelcast/management-center:4.2021.06
+      ports:
+        - "8080:8080"
+
+
 # secrets:
 #   jet-license-key:
 #     file: .jet-license-key
