--- a/jetgrpc/Dockerfile
+++ b/jetgrpc/Dockerfile
@@ -1,2 +1,3 @@
 FROM hazelcast/hazelcast-jet-enterprise:4.3.1
+COPY jmx_agent_config.yaml /opt/hazelcast-jet-enterprise/config/jmx_agent_config.yaml
 RUN cp /opt/hazelcast-jet-enterprise/opt/hazelcast-jet-grpc-4.3.1.jar /opt/hazelcast-jet-enterprise/lib/
