--- a/jet-audio-monitor/pom.xml
+++ b/jet-audio-monitor/pom.xml
@@ -34,6 +34,17 @@
       <version>4.3</version>
       <scope>provided</scope>
     </dependency>
+    <!-- prometheus client -->
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient</artifactId>
+      <version>0.10.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient_httpserver</artifactId>
+      <version>0.10.0</version>
+    </dependency>
     <dependency>
       <groupId>com.hazelcast.jet</groupId>
       <artifactId>hazelcast-jet-grpc</artifactId>
