--- a/simple-signal-generator/pom.xml
+++ b/simple-signal-generator/pom.xml
@@ -84,6 +84,7 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
                 <configuration>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <mainClass>com.sorintlab.tone.SignalSimulator</mainClass>
