--- a/audio-visualization/pom.xml
+++ b/audio-visualization/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.sorintlab</groupId>
-  <artifactId>jet-audio-monitor</artifactId>
+  <artifactId>audio-mqtt-prometheus-bridge</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>jet-audio-monitor</name>
+  <name>audio-mqtt-prometheus-bridge</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,34 +18,10 @@
   </properties>
 
   <dependencies>
-    <!-- generated grpc stubs for audio processor service -->
     <dependency>
       <groupId>com.sorintlab</groupId>
       <artifactId>audio-processing-service</artifactId>
       <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <!-- contains AudioSample type -->
-    <dependency>
-      <groupId>com.sorintlab</groupId>
-      <artifactId>simple-signal-generator</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <exclusions>
-        <exclusion>
-          <groupId>com.hazelcast</groupId>
-          <artifactId>hazelcast</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <!-- Hazelcast Jet -->
-    <dependency>
-      <groupId>com.hazelcast.jet</groupId>
-      <artifactId>hazelcast-jet</artifactId>
-      <version>4.5</version>
-    </dependency>
-    <dependency>
-      <groupId>com.hazelcast.jet</groupId>
-      <artifactId>hazelcast-jet-grpc</artifactId>
-      <version>4.5</version>
     </dependency>
     <!-- prometheus client -->
     <dependency>
