--- a/simple-signal-generator/pom.xml
+++ b/simple-signal-generator/pom.xml
@@ -30,7 +30,12 @@
         <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast</artifactId>
-            <version>4.0.3</version>
+            <version>4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sorintlab</groupId>
+            <artifactId>audio-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
