--- a/audio-processing-service-python/com.sorintlab.audioprocessor.service.yaml
+++ b/audio-processing-service-python/com.sorintlab.audioprocessor.service.yaml
@@ -1,7 +1,7 @@
 ---
 RecipeFormatVersion: '2020-01-25'
 ComponentName: com.sorintlab.audioprocessor.service
-ComponentVersion: '1.0.1'
+ComponentVersion: '1.0.3'
 ComponentDescription: Audio Processor gRPC Service
 ComponentPublisher: Sorint.lab US
 ComponentConfiguration:
@@ -12,10 +12,11 @@ Manifests:
     Lifecycle:
       Bootstrap: 
         Script: "bash {artifacts:decompressedPath}/audio_processor/greengrass_bootstrap.sh"
+        Timeout: 600
       Startup: 
         Script: "bash {artifacts:decompressedPath}/audio_processor/greengrass_startup.sh"
       Shutdown: 
         Script: "bash {artifacts:decompressedPath}/audio_processor/greengrass_shutdown.sh"
     Artifacts:
-      - URI: s3://greengrass-components-691990859209-us-east-2/audio_processor.zip 
+      - URI: s3://GG_S3_BUCKET/com.sorintlab.audioprocessor.service/1.0.3/audio_processor.zip 
         Unarchive: ZIP
